--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -81,29 +81,32 @@ Globals:
   Api:
     TracingEnabled: true
 
+
 Resources:
   IdpHandlerLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
+      LayerName: !Sub ${AWS::StackName}-handler-layer
       ContentUri: src/handler_layer
       CompatibleRuntimes:
         - python3.10
+        - python3.11
     Metadata:
-      BuildMethod: python3.10
+      BuildMethod: python3.11
 
   IdpHandlerFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/idp_handler/
       Handler: app.lambda_handler
-      Runtime: python3.10
-      FunctionName: !Sub ${AWS::StackName}_awstransfer_idp
+      Runtime: python3.11
+      FunctionName: !Sub ${AWS::StackName}-idp
       Layers:
         - !Ref IdpHandlerLayer
       Environment:
         Variables:
-          USERS_TABLE: !Sub ${AWS::StackName}_users
-          IDENTITY_PROVIDERS_TABLE: !Sub ${AWS::StackName}_identity_providers
+          USERS_TABLE: !If [CreateUsersTable, !Sub "${AWS::StackName}_users", !Ref UsersTableName]
+          IDENTITY_PROVIDERS_TABLE: !If [CreateIdentityProvidersTable, !Sub "${AWS::StackName}_identity_providers", !Ref IdentityProvidersTableName]
           USER_NAME_DELIMITER: !Ref UserNameDelimiter
           LOGLEVEL: !Ref LogLevel
           AWS_XRAY_TRACING_NAME: !Sub ${AWS::StackName}
@@ -112,7 +115,6 @@ Resources:
         SecurityGroupIds: !Split [',', !Ref SecurityGroups]
       Architectures:
       - x86_64
-
       Policies:
         - Version: '2012-10-17' 
           Statement:
@@ -156,7 +158,7 @@ Resources:
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
     Properties:
-      Name: !Sub ApplicationInsights-${AWS::StackName}_awstransfer_idp
+      Name: !Sub ApplicationInsights-${AWS::StackName}
       ResourceQuery:
         Type: CLOUDFORMATION_STACK_1_0
 
@@ -327,8 +329,8 @@ Resources:
     Type: AWS::IAM::Role
     Condition: ApiEnabled
     Properties:
-      RoleName: !Sub ${AWS::StackName}_TransferApiRole
-      AssumeRolePolicyDocument:
+      RoleName: !Sub "${AWS::StackName}_transfer-api-role"
+      AssumeRolePolicyDocument:    
         Version: '2012-10-17'
         Statement:
         - Effect: Allow
@@ -362,7 +364,7 @@ Resources:
   usersTable: 
     Condition: CreateUsersTable
     UpdateReplacePolicy: Retain
-    DeletionPolicy: Retain    
+    DeletionPolicy: RetainExceptOnCreate    
     Type: AWS::DynamoDB::Table
     Properties: 
       BillingMode: PAY_PER_REQUEST
@@ -381,7 +383,7 @@ Resources:
   identityProvidersTable: 
     Condition: CreateIdentityProvidersTable
     UpdateReplacePolicy: Retain
-    DeletionPolicy: Retain
+    DeletionPolicy: RetainExceptOnCreate
     Type: AWS::DynamoDB::Table
     Properties: 
       BillingMode: PAY_PER_REQUEST
