--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -3,6 +3,21 @@ Transform: AWS::Serverless-2016-10-31
 Description: >
 
 Parameters:
+  CreateVPC:
+    Description: 'When set, creates a pre-configured VPC for the custom IDP solution and uses it for the custom IdP Lambda function to simplify deployment. The VPC will contain public/private subnets for two AZs, two NAT Gateways, a Security Group, and a DynamoDB Gateway endpoint. If this is set to false, VPC, subnet, and security group information must be provided.'
+    Type: String
+    AllowedValues: ['true', 'false']
+    Default: 'false'
+  VPCCIDR:
+    Description: 'The CIDR to use for when creating a new VPC. The CIDR should be at least a /24 and will be divided evenly across 4 subnets. Required if CreateVPC is set.'
+    Type: String
+    Default: 172.31.0.0/16
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
+  VpcId:
+    Type: String
+    Description: An existing VPC to attach the Lambda function to. Must be set if CreateVPC is not set to true.
+    AllowedPattern: ^(vpc-[0-9a-z]+)$|^$
+    Default: ''
   Subnets:
     Description: A list of VPC subnets to attach the custom IdP Lambda to. To allow the Lambda function to connect to public IdP endpoints such as Okta, ensure the subnets are configure to route internet traffic to a NAT gateway in a public subnet. If the Lambda function will reside in private subnet without internet access, ensure a DynamoDB Gateway Endpoint is configured in the VPC. Must be set if CreateVPC is not set to true.
     Type: CommaDelimitedList
@@ -63,8 +78,33 @@ Parameters:
     Type: String
     Default: ''
 
+Metadata:
+     AWS::CloudFormation::Interface:
+      ParameterGroups:
+        - Label: 
+            default: Network Configuration
+          Parameters:
+            - CreateVPC
+            - VPCCIDR
+            - VpcId
+            - Subnets 
+            - SecurityGroups 
+        - Label: 
+            default: Identity Provider Solution Settings
+          Parameters:
+            - UserNameDelimiter
+            - SecretsManagerPermissions
+            - ProvisionApi   
+            - LogLevel
+            - EnableTracing 
+        - Label: 
+            default: Existing DynamoDB Tables 
+          Parameters:
+            - UsersTableName
+            - IdentityProvidersTableName
 
 Conditions:
+  CreateVPC: !Equals [!Ref CreateVPC, 'true']
   SecretsManagerPermission: !Equals [!Ref SecretsManagerPermissions, true]
   ApiEnabled: !Equals [!Ref ProvisionApi, true]
   TracingEnabled: !Equals [!Ref EnableTracing, true]
@@ -113,8 +153,8 @@ Resources:
           LOGLEVEL: !Ref LogLevel
           AWS_XRAY_TRACING_NAME: !Sub ${AWS::StackName}
       VpcConfig:
-        SubnetIds: !Split [',', !Ref Subnets]
-        SecurityGroupIds: !Split [',', !Ref SecurityGroups]
+        SubnetIds: !If [CreateVPC, !Sub "${PrivateSubnet1},${PrivateSubnet2}", !Join [',', !Ref Subnets]]
+        SecurityGroupIds: !If [CreateVPC, !Sub "${SecurityGroup}", !Join [',', !Ref SecurityGroups]]
       Architectures:
       - x86_64
       Policies:
@@ -396,6 +436,190 @@ Resources:
         - AttributeName: "provider"
           KeyType: "HASH"
       TableName: !Sub ${AWS::StackName}_identity_providers  
+  VPC:
+    Condition: CreateVPC
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: !Ref "VPCCIDR"
+      EnableDnsSupport: True
+      EnableDnsHostnames: True
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-vpc
+  InternetGateway:
+    Condition: CreateVPC
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-igw"      
+  InternetGatewayAttachment:
+    Condition:  CreateVPC
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
+  PublicSubnet1:
+    Condition: CreateVPC
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref "VPC"
+      CidrBlock: !Select [0, !Cidr [!Ref VPCCIDR, 4, 8]]
+      AvailabilityZone: !Select [0, Fn::GetAZs: !Ref "AWS::Region"]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-vpc-subnet-public-aza" 
+      MapPublicIpOnLaunch: true
+  PublicSubnet2:
+    Condition: CreateVPC
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref "VPC"
+      CidrBlock: !Select [1, !Cidr [!Ref VPCCIDR, 4, 8]]
+      AvailabilityZone: !Select [1, Fn::GetAZs: !Ref "AWS::Region"]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-vpc-subnet-public-azb"      
+  PublicSubnetRouteTable:
+    Condition: CreateVPC
+    DependsOn: InternetGatewayAttachment
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref "VPC"
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-vpc-rtb-public"
+  PublicSubnetRoute:
+    Condition: CreateVPC
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref "PublicSubnetRouteTable"
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+ 
+  PublicSubnet1RouteTableAssociation:
+    Condition: CreateVPC
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref "PublicSubnet1"
+      RouteTableId: !Ref "PublicSubnetRouteTable"
+  PublicSubnet2RouteTableAssociation:
+    Condition: CreateVPC
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref "PublicSubnet2"
+      RouteTableId: !Ref "PublicSubnetRouteTable"   
+  ElasticIP1:
+    Condition: CreateVPC
+    Type: "AWS::EC2::EIP"
+  ElasticIP2:
+    Condition: CreateVPC
+    Type: "AWS::EC2::EIP"   
+  NATGateway1:
+    Condition: CreateVPC
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt ElasticIP1.AllocationId
+      SubnetId: !Ref 'PublicSubnet1'
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-natgw-aza
+  NATGateway2:
+    Condition: CreateVPC
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt ElasticIP2.AllocationId
+      SubnetId: !Ref 'PublicSubnet2'
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-natgw-azb              
+  PrivateSubnet1:
+    Condition: CreateVPC
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref "VPC"
+      CidrBlock: !Select [2, !Cidr [!Ref VPCCIDR, 4, 8]]
+      AvailabilityZone: !Select [0, Fn::GetAZs: !Ref "AWS::Region"]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-vpc-subnet-private-aza"
+  PrivateSubnet2:
+    Condition: CreateVPC
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref "VPC"
+      CidrBlock: !Select [3, !Cidr [!Ref VPCCIDR, 4, 8]]
+      AvailabilityZone: !Select [1, Fn::GetAZs: !Ref "AWS::Region"]
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-vpc-subnet-private-azb"          
+
+  PrivateSubnet1RouteTable:
+    Condition: CreateVPC
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref "VPC"
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-rtb-private-aza"     
+  PrivateSubnet1RouteTableAssociation:
+    Condition: CreateVPC
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref "PrivateSubnet1"
+      RouteTableId: !Ref "PrivateSubnet1RouteTable"           
+  PrivateSubnet2RouteTableAssociation:
+    Condition: CreateVPC
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref "PrivateSubnet2"
+      RouteTableId: !Ref "PrivateSubnet2RouteTable"          
+  PrivateSubnet2RouteTable:
+    Condition: CreateVPC
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref "VPC"
+      Tags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-rtb-private-azb"        
+  PrivateSubnet1Route:
+    Condition: CreateVPC
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref "PrivateSubnet1RouteTable"
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NATGateway1
+  PrivateSubnet2Route:
+    Condition: CreateVPC
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref "PrivateSubnet2RouteTable"
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NATGateway2    
+  DDBVPCEndpoint:
+    Condition: CreateVPC
+    Type: "AWS::EC2::VPCEndpoint"
+    Properties:
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action: "*"
+            Effect: Allow
+            Resource: "*"
+            Principal: "*"
+      RouteTableIds:
+        - !Ref "PublicSubnetRouteTable"
+        - !Ref "PrivateSubnet1RouteTable"
+        - !Ref "PrivateSubnet2RouteTable"
+      ServiceName: !Join ["", [com.amazonaws., !Ref "AWS::Region", .dynamodb]]
+      VpcId: !Ref "VPC"
+  SecurityGroup:
+    Condition: CreateVPC
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: ${StackName}-security-group
+      GroupDescription: ${StackName}-security-group
+      VpcId: !Ref VPC
 
 Outputs:
   IdpHandlerFunction:
@@ -413,3 +637,15 @@ Outputs:
     Condition: ApiEnabled
     Description: The name of the IAM role created for AWS Transfer to use when invoking the API
     Value: !Ref TransferIdentityProviderApiRole  
+  VPC:
+    Description: The VPC that is used with the custom IdP solution.
+    Value:
+      !If [CreateVPC, !Ref VPC, !Ref VpcId]   
+  Subnets:
+    Description: The subnets used by the Lambda function in the custom IdP solution.
+    Value:
+      !If [CreateVPC, !Sub "${PrivateSubnet1},${PrivateSubnet2}", !Join [",", !Ref Subnets]]         
+  SecurityGroups:
+    Description: The VPC subnets attached to the Lambda function in the custom IdP solution.
+    Value:
+      !If [CreateVPC, !Ref SecurityGroup,  !Join [",", !Ref SecurityGroups]]    
