--- a/solutions/custom-idp/install.yaml
+++ b/solutions/custom-idp/install.yaml
@@ -495,6 +495,9 @@ Resources:
           - Name: StackName
             Type: PLAINTEXT
             Value: !Sub ${AWS::StackName}-awstransfer-custom-idp
+          - Name: VpcId
+            Type: PLAINTEXT
+            Value: !If [CreateVPC, !Ref VPC, !Ref VpcId]         
           - Name: Subnets
             Type: PLAINTEXT
             Value: !If [CreateVPC, !Sub "${PrivateSubnet1},${PrivateSubnet2}", !Join [',', !Ref Subnets]]
