enable debug on sam build

--- a/solutions/custom-idp/custom-idp.yaml
+++ b/solutions/custom-idp/custom-idp.yaml
@@ -617,8 +617,8 @@ Resources:
     Condition: CreateVPC
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: ${StackName}-security-group
-      GroupDescription: ${StackName}-security-group
+      GroupName: !Sub ${AWS::StackName}-security-group
+      GroupDescription: !Sub ${AWS::StackName}-security-group
       VpcId: !Ref VPC
 
 Outputs:
