--- a/solutions/custom-idp/pipeline/buildspec_build_deploy.yml
+++ b/solutions/custom-idp/pipeline/buildspec_build_deploy.yml
@@ -26,6 +26,6 @@ phases:
                     --capabilities "CAPABILITY_NAMED_IAM"
                     --no-confirm-changeset
                     --on-failure DELETE
-                    --parameter-overrides "Subnets=\"${Subnets}\" SecurityGroups=\"${SecurityGroups}\" SecretsManagerPermissions=\"${SecretsManagerPermissions}\" UserNameDelimiter=\"${UserNameDelimiter}\" LogLevel=\"${LogLevel}\" ProvisionApi=\"${ProvisionApi}\" EnableTracing=\"${EnableTracing}\" UsersTableName=\"${UsersTable}\" IdentityProvidersTableName=\"${IdentityProvidersTable}\""
+                    --parameter-overrides "Subnets=\"${Subnets}\" SecurityGroups=\"${SecurityGroups}\" SecretsManagerPermissions=\"${SecretsManagerPermissions}\" UserNameDelimiter=\"${UserNameDelimiter}\" LogLevel=\"${LogLevel}\" ProvisionApi=\"${ProvisionApi}\" EnableTracing=\"${EnableTracing}\" UsersTableName=\"${UsersTableName}\" IdentityProvidersTableName=\"${IdentityProvidersTableName}\""
 
 
