Refactored to pass an enum indicating authentication method to idp modules

--- a/solutions/custom-idp/install.yaml
+++ b/solutions/custom-idp/install.yaml
@@ -422,7 +422,8 @@ Resources:
                 - "lambda:GetFunctionCodeSigningConfig"
                 - "lambda:GetRuntimeManagementConfig"  
                 - "lambda:RemovePermission"    
-                - "lambda:TagResource"        
+                - "lambda:TagResource"  
+                - "lambda:ListTags"      
               Resource: !Sub 'arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:${AWS::StackName}-*'
             - Effect: Allow
               Action: 
