Refactored to pass an enum indicating authentication method to idp modules

--- a/solutions/custom-idp/install.yaml
+++ b/solutions/custom-idp/install.yaml
@@ -417,6 +417,7 @@ Resources:
                 - "lambda:AddPermission"
                 - "lambda:CreateFunction"
                 - "lambda:UpdateFunction"
+                - "lambda:UpdateFunctionCode"
                 - "lambda:DeleteFunction"                
                 - "lambda:GetFunction"
                 - "lambda:GetFunctionCodeSigningConfig"
