--- a/solutions/custom-idp/Pipfile
+++ b/solutions/custom-idp/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 boto3 = "*"
-argon2 = "*"
+argon2-cffi = "*"
 ldap3 = "*"
 urllib3 = "*"
 aws-xray-sdk = "*"
+
 
 [dev-packages]
 
