--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 solutions/custom-idp/Pipfile.lock
 solutions/custom-idp/src/handler_layer**
+.aws-sam/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
